[package]
name = "galacksi-orbit-server"
version = "0.1.0"
edition = "2021"
description = "Multiplayer game server for Galacksi Orbit"
authors = ["Asmov LLC <development.pub@asmov.software>"]
repository = "https://github.com/asmov/galacks-orbit"
license = "AGPL-3.0-or-later"
keywords = ["galacksi", "orbit", "multiplayer", "space", "shooter"]
categories = ["games"]

[dependencies]
